[gd_scene load_steps=9 format=3 uid="uid://dymkml8e85vkf"]

[ext_resource type="Texture2D" uid="uid://bfnh8jrfyrbgq" path="res://Menus/Title/manu_splash.png" id="1_5w5qm"]
[ext_resource type="Script" path="res://Menus/Title/main_menu_testing.gd" id="1_cp3ko"]
[ext_resource type="Texture2D" uid="uid://d0q3d7iqkyaem" path="res://icon_64x64.png" id="2_dp82y"]
[ext_resource type="Script" path="res://Menus/Title/light_flicker.gd" id="3_fm5ma"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_itcg1"]
polygon = PackedVector2Array(103, 71, 211, 71, 211, 290, 103, 290)

[sub_resource type="Gradient" id="Gradient_nlcak"]
offsets = PackedFloat32Array(0, 0.407407, 0.582492, 0.707071)
colors = PackedColorArray(0.89059, 0.89059, 0.89059, 1, 0.411765, 0.411765, 0.411765, 1, 0.378075, 0.378075, 0.378075, 0.840909, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qsd18"]
gradient = SubResource("Gradient_nlcak")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.9)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_wpjku"]
polygon = PackedVector2Array(538, 71, 538, 290, 430, 290, 430, 71, 430, 71)

[node name="MainMenu" type="Node"]
script = ExtResource("1_cp3ko")

[node name="Node2D" type="Node2D" parent="."]

[node name="MenuBG" type="Sprite2D" parent="Node2D"]
texture = ExtResource("1_5w5qm")
centered = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="Node2D"]
occluder = SubResource("OccluderPolygon2D_itcg1")

[node name="PointLight2D" type="PointLight2D" parent="Node2D"]
position = Vector2(320.5, 180.5)
scale = Vector2(10, 10)
color = Color(1, 1, 0.92, 1)
energy = 4.0
shadow_enabled = true
shadow_color = Color(0.16, 0.16, 0.16, 0.247059)
texture = SubResource("GradientTexture2D_qsd18")
script = ExtResource("3_fm5ma")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Node2D"]
occluder = SubResource("OccluderPolygon2D_wpjku")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.1904, 0.032, 0.32, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Creatio
  Ex Umbra"

[node name="TextureRect" type="TextureRect" parent="MainMenu/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_dp82y")
stretch_mode = 3

[node name="ButtonNewGame" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
light_mask = 0
layout_mode = 2
text = "New game"

[node name="ButtonSave" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ButtonLoadGame" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
light_mask = 0
layout_mode = 2
text = "Load game"

[node name="ButtonSettings" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
light_mask = 0
layout_mode = 2
disabled = true
text = "Settings"

[node name="ButtonQuit" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
light_mask = 0
layout_mode = 2
text = "Quit game"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0

[node name="HSlider" type="HSlider" parent="MainMenu/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.001
value = 0.01
tick_count = 20
ticks_on_borders = true

[node name="HSlider2" type="HSlider" parent="MainMenu/VBoxContainer"]
layout_mode = 2
min_value = -10.0
max_value = 10.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="HSlider3" type="HSlider" parent="MainMenu/VBoxContainer"]
layout_mode = 2
min_value = -10.0
max_value = 10.0
value = 4.0
tick_count = 10
ticks_on_borders = true

[node name="HSlider4" type="HSlider" parent="MainMenu/VBoxContainer"]
layout_mode = 2
min_value = -5.0
max_value = 5.0
step = 0.1
value = 0.5
tick_count = 10
ticks_on_borders = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -38.0
offset_right = 78.0
offset_bottom = 38.0
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/VBoxContainer2"]
layout_mode = 2
text = "freq: x"

[node name="Label2" type="Label" parent="MainMenu/VBoxContainer2"]
layout_mode = 2
text = "x: x"

[node name="Label3" type="Label" parent="MainMenu/VBoxContainer2"]
layout_mode = 2
text = "y: x"

[node name="Label4" type="Label" parent="MainMenu/VBoxContainer2"]
layout_mode = 2
text = "z: x"

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/ButtonLoadGame" to="." method="_on_button_load_game_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/HSlider3" to="." method="_on_h_slider_3_value_changed"]
[connection signal="value_changed" from="MainMenu/VBoxContainer/HSlider4" to="." method="_on_h_slider_4_value_changed"]
